<resources>
    <string name="app_name">Lezamako altxorra</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="agricolaText">Lezamako Nekazaritza eta Abeltzaintzako Kooperatibaren 1925. urtean sortu zen  , Lezamako hemezortzi auzokidez osatuta, egun nekazaritza sektorea bere jardueren defentsa hobea antolatzen hasi zen, Lezamako bizilagunen artean, landa-gune ingurunea izanda garrantzi handia hartu zuen.</string>
    <string name="txakoli">9 hektareako azalera betez, Bilbo Handia eskualdean kokatuta daude, Txorierriko bailararen bihotzean, Lezaman hain zuzen ere. Klima mesotermikoa da, tenperatura epelduna eta euritsua. Lurzoru franko-buztintsuak , bertoko mahatsondo moten “Hondarrabi Zuri” eta “Hondarrabi Zuri Zerratia” eta gutxiengoa diren mahatsondoen “Petit Manseng” eta “Riesling” oinarri dira eta hegoalderantz begira dauden magaletan daude landatuta gehienak.</string>
    <string name="udala">Zatoz Lezamara Txorierriko haranaz gozatzeko! Bisitatu Txorierriko Mankomunitatearen web orria aukera guztiak ezagutzeko: ibilbideak, ostatuak, jatetxeak, garraioak... www.txori​e​rri.eus</string>
    <string name="harategia">Lezamako harategian gaude eta hemen bertan herrian eta inguruan oso ospetsua den produktu bat prestatzen dute. Zure lana produktu hori aurkitzea da, baina lasai, lagungarriak izan daitezken argazki batzuk izango dituzu.</string>
    <string name="santamaria">Oraintxe Santa Maria Elizan gaude, Lezamako herriaren erdian kokatuta dagoena. Santa Maria Eliza XVI. mendean eraiki zen eta estilo gotikoa dauka.</string>
    <string name="dorrea">Aretxalde auzora ailegatu gara eta Lezama dorrea dugu gure aurrean. Dorre hau gotorleku militarra izan zen. Gainera, botere ekonomiko eta sozialaren sinboloa izan zen, dorreak jabeen boterezko jatorria adierazten zuelako.</string>
    <string name="arkua">"San Mamés" futbol zelaia 1913an eraiki zen eta geroztik, hainbat aldiz handitu egin da. 1945ean zelaia handitu zuten eta horrexegatik, mendebaldeko tribunaren estalkian altzairuzko arku handi bat sartu zuten. Honako hau, futbol-zelaiaren ezaugarrietako bat bihurtu zen eta baita klub berarena ere. San Mames futbol-zelaia 2013an eraitsi zuten eta herri-mobilizazio batzuen ondoren, arkua indultatzea erabaki zuten. Hortaz, arkua desmuntatu, zaharberritu eta Athleticek Lezaman dituen instalazioetara eraman zuten.</string>
    <string name="homeButton">Irten</string>
    <string name="btnValidate">Baieztatu</string>
    <string name="btnBack">Atzera</string>
    <string name="btnContinue">Jarraitu</string>
    <string name="btnRepeat">Errepikatu</string>
    <string name="btnDarkMode">Ilun modua</string>
    <string name="adminloginTitle">Kaixo</string>
    <string name="adminloginSubtitle">Sartu pasahitza</string>
    <string name="adminloginPassword">Pasahitza</string>
    <string name="incorrecto">Pasahitza ez da zuzena</string>
    <string name="mainMenuTitulo1">Lezamaren misterioa</string>
    <string name="mainMenuTitulo2">Lezama</string>
    <string name="mainMenuAjustes">Doikuntzak</string>
    <string name="mainMenuJugar">Jolastu</string>
    <string name="mainMenuModoLibre">Lehiaketa modua</string>
    <string name="scoreboard">Markatzaile globala</string>
    <string name="introduceNombre">Sartu zure izena</string>
    <string name="continuar2">JARRAITU</string>
    <string name="anonimo">Puntuazioa anonimoki gorde da.</string>
    <string name="nombreCorrecto">Puntuazioa gorde da.</string>
    <string name="diferenciasTitulo">Aurkitu 6 desberdintasunak</string>
    <string name="diferenciasRestantes">Desberdinak aurkitutakoak:</string>
    <string name="terminar">AMAITU</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="first_fragment_label">Lehenengo Fragmentua</string>
    <string name="second_fragment_label">Bigarren Fragmentua</string>
    <string name="next">Hurrengoa</string>
    <string name="previous">Aurrekoa</string>
    <string name="profesor">Irakasle modua</string>
    <string name="inicio">Hasiera</string>
    <string name="eliminar">Ezabatu</string>
    <string name="nuevo">Berria</string>
    <string name="partida">Partida</string>
    <string name="error_ajustes_1">Ezin dira partida guztiak ezabatu</string>
    <string name="multipleChoiceExplain">Aukeratu erantzun zuzena</string>
    <string name="multipleChoiceAnswer">Erantzuna</string>
    <string name="zureerantzuna">Zure erantzuna</string>
    <string name="insertWordsExplain">Osatu testua</string>
    <string name="wordSearchExplain">Aurkitu hurrengo hitzak</string>
    <string name="mensaje_fallido">Huts egin duzu!</string>
    <string name="terminar_juego">Jokoa amaituta</string>
    <string name="galdera1.3">Zein da idia?</string>
    <string name="erantzun1.3">b</string>
    <string name="galdera1.4.1">Urteko zein unetan egiten dira idi-probak?</string>
    <string name="aukera1.4.1.a">Herriko festetan</string>
    <string name="aukera1.4.1.b">Gabonetan</string>
    <string name="aukera1.4.1.c">Aste santuan</string>
    <string name="erantzun1.4.1">a</string>
    <string name="galdera1.4.2">Zenbat pisatzen dute idiek?</string>
    <string name="aukera1.4.2.a">100 eta 200 kg artean</string>
    <string name="aukera1.4.2.b">500 eta 650kg artean</string>
    <string name="aukera1.4.2.c">650 eta 750 kg artean</string>
    <string name="erantzun1.4.2">b</string>
    <string name="galdera1.4.3">Idi-probetan parte hartu aurretik zer jaten dute idiek?</string>
    <string name="aukera1.4.3.a">Babak</string>
    <string name="aukera1.4.3.b">Letxuga</string>
    <string name="aukera1.4.3.c">Lekak</string>
    <string name="erantzun1.4.3">a</string>
    <string name="galdera4.3.1">Nor zen Mikel Zarate?</string>
    <string name="aukera4.3.1.a">Euskal idazlea</string>
    <string name="aukera4.3.1.b">Euskal bertsozalea</string>
    <string name="aukera4.3.1.c">Espainiako idazlerik famatuena</string>
    <string name="aukera4.3.1.d">Bertsolari famatua</string>
    <string name="erantzun4.3.1">a</string>
    <string name="galdera4.3.2">Noiz jaio zen?</string>
    <string name="aukera4.3.2.a">18.mendean</string>
    <string name="aukera4.3.2.b">1935.urtean</string>
    <string name="aukera4.3.2.c">21.mendean</string>
    <string name="aukera4.3.2.d">1933.urtean</string>
    <string name="erantzun4.3.2">d</string>
    <string name="galdera4.3.3">Non jaio zen?</string>
    <string name="aukera4.3.3.a">Bilbon</string>
    <string name="aukera4.3.3.b">Frantzian, nahiz eta euskaldun idazlea izan</string>
    <string name="aukera4.3.3.c">Lezaman</string>
    <string name="aukera4.3.3.d">Iruñan</string>
    <string name="erantzun4.3.3">c</string>
    <string name="galdera4.3.4">Non egin zuen lan ikasle bezala?</string>
    <string name="aukera4.3.4.a">Derioko Udako Ikastaroetan</string>
    <string name="aukera4.3.4.b">Derioko ikastolan udan</string>
    <string name="aukera4.3.4.c">Deustoko Udako Ikastaroetan</string>
    <string name="aukera4.3.4.d">Deustoko ikastolan udan</string>
    <string name="erantzun4.3.4">a</string>
    <string name="galdera4.3.5">Zenbat eleberri argitaratu zituen?</string>
    <string name="aukera4.3.5.a">Ez zuen eleberririk argitaratu</string>
    <string name="aukera4.3.5.b">1</string>
    <string name="aukera4.3.5.c">2</string>
    <string name="aukera4.3.5.d">10 baino gehiago, idazlea bait zen</string>
    <string name="erantzun4.3.5">b</string>
    <string name="galdera4.3.6">Noiz argitaratu zuen Haurgintza minetan eleberria?</string>
    <string name="aukera4.3.6.a">1973</string>
    <string name="aukera4.3.6.b">1933</string>
    <string name="aukera4.3.6.c">1793</string>
    <string name="aukera4.3.6.d">1937</string>
    <string name="erantzun4.3.6">a</string>
    <string name="galdera1.1">Ze kirol egiten zen hemen?</string>
    <string name="pista1.1">Pista: Zer erlazio dago soinua eta argazkien artean?</string>
    <string name="erantzun1.1a">IDI PROBAK</string>
    <string name="erantzun1.1b">IDI-PROBAK</string>
    <string name="galdera2.1">Lezamako harategian oso ospetsua den produktu bat prestatzen dute osagai hauekin. Ze produktu da hori?</string>
    <string name="erantzun2.1a">ODOLOSTE</string>
    <string name="erantzun2.1b">ODOLOSTEA</string>
    <string name="galdera3.1">Badakizue zer den edari hau?</string>
    <string name="erantzun3.1a">TXAKOLI</string>
    <string name="erantzun3.1b">TXAKOLIA</string>
    <string name="galdera5.2">Zer ikusten duzue elizan? zer objetu adierazgarri ditu? Komentatu zuen artean</string>
    <string name="erantzun5.2a">KANPAIAK</string>
    <string name="erantzun5.2b">KANPAI</string>
    <string name="pistakTitle">Pista hauekin, erantzun galderari</string>
    <string name="crucigramaTitle">Bete hutsuneak definizioak jarraituz</string>
    <string name="sopaLetrasTitle">Aurkitu hurrengo hitzak</string>
    <string name="multipleChoiceTitle">Aukeratu erantzun zuzena</string>
    <string name="puzleTitle">Amaitu puzlea</string>
    <string name="infoTitle">Informazioa</string>
    <string name="insertWordsTitle">Aukeratu hitz zuzenak</string>
    <string name="juegoTorreTitle">Kokatu leku zuzenean</string>
    <string name="mapTitle">Ezagutu Lezama</string>
    <string name="ordenarImagenesTitle">Kokatu argazkiak</string>
    <string name="puzzleTitle">Puzlea</string>
    <string name="videoTitle">Ikusi bideoa</string>
    <string name="continuar">Partida jarraitu nahi duzu?</string>
    <string name="si">Jarraitu</string>
    <string name="no">Errepikatu</string>
    <string name="Juego1_2">Une honetan, Lezamako nekazaritza-kooperatibaren ondoan gaude. Bertan, urtez urte herriko idi-probak egiten dira. Lezamako kasuan, proba hauek urtero egiten dira jaietan. Normalean, idiek 500 eta 650 kg arteko pisua izaten dute. Proba edo apustu garrantzitsuen aurreko egunetan, idiei lana murriztu eta elikadura-erregimen berezi bat ezartzen zaie; erregimen horren oinarria babak dira.</string>
    <string name="Juego2_2">Bizkaiko odolosterik onenak Lezaman daude, sariren bat lortuta dute jada. Odolosteak txarri odolez, kipulaz, porruz, hesteekaz, koipeagaz, arrozaz, piperrautsaz eta gaztaz egiten dira. Gainera, herriko jaien bezperan, odolosteen afaria egiten da ohitura moduan. Lezamako jaietan izaten dira egiten diren lehenak eta maiatza inguruan odolosteak egiteari uzten diote.</string>
    <string name="Juego2_4">...</string>
    <string name="Juego3_2">Argazkian ikusten den edaria txakolina da. Txakolina ardo zuria da, Courbu barietateko mahatsetik abiatuta egiten dena. Txakolina, batez ere, Euskal Herrian ekoizten da.</string>
    <string name="Juego3_3">Orain Espainiako upategi ospetsuenetariko batean gaude, “Lezamako Magalarte Txakolina”. Upategi hau familiako negozio bat da eta mahastizaintza eta ardogintza tradizio handia du. Txakolina eratzen dute teknika tradizionaletan oinarrituz eta gaur egungo teknologien laguntzarekin.</string>
    <string name="Juego3_5">...</string>
    <string name="Juego4_1">Mikel Zarate Lejarraga Lezaman jaio zan 1933an. Idazlea zan, euskal idazlea konkretuki. 1970eko hamarkadaren hasieratik Derioko Udako Ikastaroetan lan egin zuen irakasle bezala eta Bilboko Hizkuntza Eskola Ofizialean ere bai. 1976an La Gran Enciclopedia Vasca argitaletxeak bere doktore tesia argitaratu zuen: Influencias del vascuence en la lengua castellana. Literatura lanen arloan, Lezamakoak, prosaz nahiz bertsoz idatzi zuen. Eleberri bakarra argitaratu zuen: Haurgintza minetan (1973) eta beste bat amaitu gabe utzi zuen.</string>
    <string name="Juego4_4">...</string>
    <string name="Juego5_1">Oraintxe Santa Maria Elizan gaude, Lezamako herriaren erdian kokatuta dagoena. Santa Maria Eliza XVI. mendean eraiki zen eta estilo gotikoa dauka</string>
</resources>