<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="70dp"
    tools:context=".AdminLoginActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/noahgrotesqueblack"
            android:text="@string/adminloginTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/marron"
            android:textSize="48sp"
            tools:text="@string/adminloginTitle" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:layout_marginTop="50dp"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/noahgrotesque"
            android:text="@string/adminloginSubtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/naranja"
            tools:text="@string/adminloginSubtitle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noahgrotesque"
            android:text="@string/adminloginPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/marron"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/textPassword"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="12"
            android:fontFamily="@font/noahgrotesque"
            android:hint="@string/adminloginPassword"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/marron"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnValidate"
                style="@style/GreenButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:fontFamily="@font/noahgrotesquebold"
                android:text="@string/btnValidate" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/btnContinue"
                style="@style/GreyButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/btnBack" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
