<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noahgrotesqueblack"
        android:text="@string/adminloginTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/marron"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:text="@string/adminloginTitle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noahgrotesque"
        android:text="@string/adminloginSubtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/naranja"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="120dp"
        tools:text="@string/adminloginSubtitle" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="248dp"
        android:layout_height="44dp"
        android:ems="10"
        android:fontFamily="@font/noahgrotesque"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/marron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noahgrotesque"
        android:text="@string/adminloginPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/marron"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/button"
        style="@style/GreenButtonStyle"
        android:layout_width="102dp"
        android:layout_height="42dp"
        android:fontFamily="@font/noahgrotesquebold"
        android:text="Button"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="511dp" />

</androidx.constraintlayout.widget.ConstraintLayout>